--- a/Client-Side-Routing/client/package.json
+++ b/Client-Side-Routing/client/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cs5i-1",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "semantic-ui-css": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
